fixed modal windows alignment

--- a/app/src/css/newEvent.css
+++ b/app/src/css/newEvent.css
@@ -50,7 +50,7 @@ body {
 }
 
 .window-form {
-  position: absolute;
+  position: static;
   left: 10%;
   right: 10%;
   top: 15%;
